# lambda_engine

./: .gitignore  Cargo.toml  Makefile  README.md  temp
crates/lambda_camera/: Cargo.toml
crates/lambda_camera/src/: camera.rs  lib.rs
crates/lambda_geometry/: Cargo.toml
crates/lambda_geometry/src/: lib.rs  macros.rs  utility.rs
crates/lambda_geometry/src/l2d/: mod.rs  plane.rs  ring.rs  square.rs
crates/lambda_geometry/src/l3d/: cube.rs  mod.rs  model.rs  sphere.rs
crates/lambda_gui/: Cargo.toml
crates/lambda_internal/: Cargo.toml
crates/lambda_internal/src/: camera.rs  command_buffer.rs  display.rs  engine.rs  frame_buffer.rs  lib.rs  pipeline.rs  resource.rs  swap_chain.rs  texture.rs  time.rs  uniform_buffer.rs
crates/lambda_internal/src/object/: macros.rs  utility.rs
crates/lambda_internal/src/object/l3d/: mod.rs
crates/lambda_internal/src/shaders/ui/: shader.frag  shader.vert
crates/lambda_object/: Cargo.toml
crates/lambda_proc_macro/: Cargo.toml
crates/lambda_proc_macro/src/: lib.rs  utility.rs
crates/lambda_space/: Cargo.toml
crates/lambda_space/src/: lib.rs  macros.rs  space.rs
crates/lambda_tooling/: Cargo.toml
crates/lambda_vulkan/: Cargo.toml
crates/lambda_vulkan/src/: buffer.rs  command_buffer.rs  debug.rs  device.rs  frame_buffer.rs  graphics_pipeline.rs  lib.rs  memory.rs  renderer.rs  resource.rs  swap_chain.rs  sync_objects.rs  texture.rs  uniform_buffer.rs  utility.rs
crates/lambda_window/: Cargo.toml
crates/lambda_window/src/: lib.rs  window.rs
crates/wave_camera/: Cargo.toml
crates/wave_camera/src/: camera.rs  lib.rs
crates/wave_geometry/: Cargo.toml
crates/wave_geometry/src/: lib.rs  utility.rs
crates/wave_geometry/src/l2d/: mod.rs  plane.rs  ring.rs
crates/wave_geometry/src/l3d/: cube.rs  model.rs  sphere.rs
crates/wave_internal/: Cargo.toml
crates/wave_internal/src/: engine.rs  lib.rs  time.rs
crates/wave_proc_macro/: Cargo.toml
crates/wave_proc_macro/src/: lib.rs  utility.rs
crates/wave_space/: Cargo.toml
crates/wave_space/src/: lib.rs  macros.rs  space.rs
crates/wave_tooling/: Cargo.toml
crates/wave_vulkan/: Cargo.toml
crates/wave_vulkan/src/: buffer.rs  command_buffer.rs  debug.rs  device.rs  frame_buffer.rs  graphics_pipeline.rs  lib.rs  memory.rs  renderer.rs  resource.rs  swap_chain.rs  texture.rs  uniform_buffer.rs  utility.rs
crates/wave_window/: Cargo.toml
crates/wave_window/src/: lib.rs  window.rs
engine/: Cargo.toml
engine/src/: camera.rs  main.rs  model.rs  pipeline.rs  resource.rs  uniform_buffer.rs  window.rs
examples/assets/models/viking_room_model/: README.md
examples/cube/: main.rs
examples/cube_model/: main.rs
examples/monkey_model/: main.rs
examples/saturn/: main.rs
examples/square/: main.rs
examples/viking_room_model/: main.rs
lambda_engine/: Cargo.toml
lambda_engine/examples/cube/: main.rs
lambda_engine/examples/cube_model/: main.rs
lambda_engine/examples/model/: main.rs
lambda_engine/examples/saturn/: main.rs
lambda_engine/examples/square/: main.rs
lambda_engine/examples/viking_room_model/: main.rs
lambda_engine/src/: camera.rs  command_buffer.rs  debug.rs  device.rs  display.rs  lib.rs  memory.rs  pipeline.rs  space.rs  texture.rs  time.rs  uniform_buffer.rs
lambda_engine/src/object/: mod.rs  utility.rs
lambda_engine/src/object/l2d/: mod.rs  ring.rs  square.rs
lambda_engine/src/object/l3d/: cube.rs  model.rs  sphere.rs
lambda_engine/src/shapes/: macros.rs  mod.rs  utility.rs
lambda_engine/src/shapes/l2d/: ring.rs  square.rs
lambda_engine/src/shapes/l3d/: cube.rs  mod.rs  model.rs  sphere.rs
lambda_engine/src/shapes/model/: mod.rs
src/: camera.rs  command.rs  command_buffer.rs  debug.rs  device.rs  display.rs  frame_buffer.rs  lib.rs  main.rs  memory.rs  model.rs  pipeline.rs  render.rs  resource.rs  space.rs  swap_chain.rs  swapchain.rs  sync_objects.rs  texture.rs  time.rs  types.rs  uniform.rs  uniform_buffer.rs  utility.rs  window.rs
src/model/: mod.rs  utilities.rs  utility.rs
src/shapes/: mod.rs  utility.rs
src/shapes/l2d/: ring.rs  square.rs
src/shapes/l3d/: cube.rs  sphere.rs
