[package]
name = "lambda_engine"
version = "0.1.0"
edition = "2021"
include = ["src/**/*"]

[dependencies]
ash = "0.37.0"
ash-window = "0.10.0"
derive-new = "0.5.9"
derive_builder = "0.11.1"
derive_more = "0.99.17"
enum-as-inner = "0.4.0"
image = "0.24.1"
lazy_static = "1.4.0"
memoffset = "0.6.5"
nalgebra = "0.30.1"
tobj = "3.2.2"
winit = "0.26.1"

[[example]]
name = "saturn"
crate-type = ["bin"]

[[example]]
name = "cube"
crate-type = ["bin"]

[[example]]
name = "model"
crate-type = ["bin"]
