[package]
name = "lambda_engine"
version = "0.1.0"
edition = "2021"
include = ["src/**/*"]

[dependencies]
ash = "0.37.0"
ash-window = "0.10.0"
derive-new = "0.5.9"
derive_builder = "0.11.2"
derive_more = "0.99.17"
image = "0.24.2"
memoffset = "0.6.5"
nalgebra = "0.31.0"
smallvec = "1.8.0"
tobj = "3.2.2"
winit = "0.26.1"

# Shapes

[[example]]
name = "saturn"
crate-type = ["bin"]

[[example]]
name = "cube"
crate-type = ["bin"]

[[example]]
name = "square"
crate-type = ["bin"]

# Models

[[example]]
name = "cube_model"
crate-type = ["bin"]

[[example]]
name = "viking_room_model"
crate-type = ["bin"]
