[package]
name = "lambda_camera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.11.2"
nalgebra = "0.31.0"
winit = "0.26.1"
lambda_space = { path = "../lambda_space" }
lambda_window = { path = "../lambda_window" }
