[package]
name = "lambda_geometry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
derive_builder = "0.11.2"
derive_more = "0.99.17"
enum_dispatch = "0.3.8"
nalgebra = "0.31.0"
tobj = "3.2.2"
lambda_space = { path = "../lambda_space" }
lambda_vulkan = { path = "../lambda_vulkan" }
