[package]
name = "lambda_geometry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
derive_builder = "0.20.0"
derive_more = "0.99.17"
enum_dispatch = "0.3.13"
nalgebra = "0.32.5"
tobj = "4.0.2"
lambda_space = { path = "../lambda_space" }
lambda_vulkan = { path = "../lambda_vulkan" }
