[package]
name = "lambda_internal"
version = "0.1.0"
edition = "2021"
include = ["src/**/*"]

[dependencies]
nalgebra = "0.31.0"
winit = "0.26.1"
lambda_geometry = { path = "../lambda_geometry" }
lambda_vulkan = { path = "../lambda_vulkan" }
lambda_camera = { path = "../lambda_camera" }
lambda_window = { path = "../lambda_window" }
