[package]
name = "lambda_window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.0", default-features = false }
ash-window = "0.10.0"
winit = "0.26.1"
lambda_space = { path = "../lambda_space" }
