[package]
name = "wave_window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.38.0", default-features = false }
ash-window = "0.13.0"
winit = "0.30.0"
nalgebra = "0.32.5"
wave_space = { path = "../wave_space" }
